--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class = "hero">
+		<div class = "container-1">
+			<img src = "https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+		</div>
+		<div class = "container-2">
+			<h2>Welcome to my Pinterest clone</h2>
+			<p>Discover new inspiration and save your favourite ideas</p>
+			<button type = "button" value = "explore" class = "btn"><a href = "#">Explore now</a></button>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
